# iris-test

./: .env  .gitignore  README.md  create_volumes_with_permissions.sh  docker-compose.yml  merge.cpf  restore-db.sh  setup-complete.sh  start.sh  stop.sh  terminal.sh
code/: HelloWorld.py  init_pyprod.sh  python.sh  quickstart.py  temperature.py
iris-test/: Dockerfile  iris.script  merge.cpf  requirements.txt
iris-test/sql/: crebas_tdcm.sql
iris-test/src/: ASTME1238.inc  ASTME1238Errors.inc
iris-test/src/iris-temp-flow/: README.md  pyproject.toml  requirements.txt
iris-test/src/iris-temp-flow/src/: main.py
iris-test/src/iris-temp-flow/src/production/: __init__.py
iris-test/src/iris-temp-flow/src/production/adapters/: inbound_call_interval_adapter.py  outbound_weather_api_adapter.py
iris-test/src/iris-temp-flow/src/production/config/: __init__.py  city_list.py
iris-test/src/iris-temp-flow/src/production/messages/: __init__.py  temperature_messages.py
iris-test/src/iris-temp-flow/src/production/operations/: __init__.py  city_temperature_operation.py
iris-test/src/iris-temp-flow/src/production/processes/: __init__.py  city_temperature_process.py
iris-test/src/iris-temp-flow/src/production/services/: city_temperature_service.py
iris-test/src/iris-temp-flow/tests/: test_city_temperature_flow.py
jdbc/: jdbcConnectMSSQL.settings
jupyter/: Dockerfile
mssql/: Dockerfile  entrypoint.sh
postgreSQL/: create_table.sql
src/: HL7v25IHE.HL7  TECHNIDATA_SIL.HL7
test/: README_HL7.md  demo_hl7.py  file.sh  send_tcp.py  send_tcp_v1.py
(+160 files in other folders)
