[tool.poetry]
name = "iris-temp-flow"
version = "0.1.0"
description = "A project that retrieves city temperatures at specified intervals using intersystems_pyprod."
authors = ["Sylvain Guilbaud <your_email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
intersystems_pyprod = "^1.0.0"  # Adjust the version as necessary

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"